<resources>
    <string name="app_name">Meal Book</string>

    <string name="landing_category_title">Category</string>
    <string name="landing_recipe_title">Recipes</string>

    <string name="recipe_ingredient_title">Ingredient</string>
    <string name="recipe_ingredient_instruction">Instruction</string>

    <string name="no_data_title">Oh no!</string>
    <string name="no_data_description">No information available in the local.\n Please try with network</string>
    <string name="no_data_okay">Okay</string>
</resources>