<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/space_normal">

    <TextView
        style="@style/TextAppearance.Material3.DisplaySmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data_title"
        android:textColor="?attr/colorPrimary" />

    <TextView
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data_description"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimary" />

    <Button
        android:id="@+id/btn_okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_normal"
        android:text="@string/no_data_okay" />

</LinearLayout>